# hone

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  Cargo.toml  ExportOptions.plist  FEATURES.md  IMPLEMENTATION.md  LICENSE  PROJECT_SUMMARY.md  PROMPT.md  QUICKSTART.md  README.md  appcast.xml  eslint.config.js  package.json  progress.txt  ralph.sh  test-semantic.hone
.github/workflows/: ci.yml  release.yml
Hone/: AttachmentHandler.swift  ContentView.swift  GitHubAuth.swift  Hone.entitlements  HoneApp.swift  HotkeyManager.swift  Info.plist  IssueViewModel.swift  KeychainHelper.swift  LLMService.swift  MenuBarController.swift
Hone.xcodeproj/: project.pbxproj
docs/: IMPLEMENTATION_NOTES.md  LSP_SPEC.md  LSP_USAGE.md  README.md  SPEC.md  VSCODE_TEST_EXPLORER_SPEC.md  lsp-spec.md
docs/implementation/: textmate-grammar.md
docs/lsp/: lsp-spec.md  lsp-usage.md
docs/spec/: language-spec.md  setup-command.md  update-checks-and-self-update.md
docs/specs/: setup-command.md
editors/helix/: README.md  languages.toml
editors/nvim/: README.md  hone.lua
editors/vscode/: .vscodeignore  README.md  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
examples/: assertions.hone  basic.hone  environment.hone  filesystem.hone  shell-state.hone  strings.hone
site/: README.md  astro.config.mjs  package-lock.json  package.json
src/: cli.ts  lib.rs  main.rs
src/assertions/: exitcode.rs  filesystem.rs  mod.rs  output.rs  timing.rs
src/lsp/: completion.rs  diagnostics.rs  formatting.rs  handlers.rs  hover.rs  mod.rs  semantic_tokens.rs  server.rs  shell.rs  symbols.rs
src/parser/: ast.rs  errors.rs  lexer.rs  mod.rs  parse.rs  parser.rs
src/runner/: executor.rs  files.rs  mod.rs  reporter.rs  sentinel.rs  shell.rs
src/setup/: detect.rs  mod.rs
src/update/: check.rs  mod.rs  self_update.rs
src/watcher/: file_watcher.rs  mod.rs  (+2 more)
syntaxes/: hone.tmlanguage.json
(+64 files in other folders)
